完成数据请求

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>豆瓣电影</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>AngularFlow--实战项目之电影搜索</title>
+    <base href="/douBanVideo/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
